<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>ru.hh.public-pom</groupId>
        <artifactId>public-pom</artifactId>
        <version>1.47</version>
    </parent>

    <groupId>ru.hh.nab</groupId>
    <artifactId>nuts-and-bolts-parent</artifactId>
    <packaging>pom</packaging>
    <version>4.27.14-SNAPSHOT</version>

    <name>nuts'n'bolts parent module</name>

    <modules>
        <module>nab-common</module>
        <module>nab-starter</module>
        <module>nab-data-source</module>
        <module>nab-example</module>
        <module>nab-hibernate</module>
        <module>nab-testbase</module>
        <module>nab-tests</module>
        <module>nab-logging</module>
        <module>nab-jclient</module>
        <module>nab-metrics</module>
        <module>nab-kafka</module>
        <module>nab-websocket</module>
        <module>nab-testbase-old</module>
    </modules>

    <properties>
        <junit.version>5.6.2</junit.version>
        <spring.version>5.2.9.RELEASE</spring.version>
        <spring.kafka.version>2.3.7.RELEASE</spring.kafka.version>
        <jersey.version>2.29.1</jersey.version>
        <hibernate.version>5.4.21.Final</hibernate.version>
        <postgres.jdbc.version>42.2.5</postgres.jdbc.version>
        <hhmetrics.version>0.19</hhmetrics.version>
        <jetty.version>9.4.24.v20191120</jetty.version>
        <jackson.version>2.10.0</jackson.version>
        <slf4j.version>1.7.28</slf4j.version>
        <logback.version>1.2.3</logback.version>
        <jclient.version>2.1.6</jclient.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>11</java.version>
        <orbitz.consul.version>1.4.0-hh-1.1</orbitz.consul.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>4.0.1</version>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>3.5.11</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${spring.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>1.6</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.8.1</version>
            </dependency>

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>syslog4j</artifactId>
                <version>0.9.46</version>
            </dependency>

            <!--Jackson-->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.jaxrs</groupId>
                <artifactId>jackson-jaxrs-json-provider</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.module</groupId>
                <artifactId>jackson-module-jaxb-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>codecoverage</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
                <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
                <sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
                <sonar.java.binaries>${project.build.directory}/classes</sonar.java.binaries>
                <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
                <sonar.junit.reportPaths>${project.build.directory}/surefire-reports</sonar.junit.reportPaths>
                <sonar.coverage.exclusions>**/*Test.java</sonar.coverage.exclusions>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>@{argLine}</argLine>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <configuration>
                            <excludes>
                                <exclude>ru/hh/**/*Test.class</exclude>
                            </excludes>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>hh-public</id>
            <name>hh public releases repository</name>
            <url>http://m2.hh.ru/content/repositories/public-releases</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>public-jboss</id>
            <url>https://repository.jboss.org/nexus/content/groups/public-jboss</url>
        </repository>
        <repository>
            <id>dev-java-net-glassfish-m2</id>
            <url>http://download.java.net/maven/glassfish</url>
        </repository>
    </repositories>

    <scm>
        <connection>scm:git:git@github.com:hhru/nuts-and-bolts.git</connection>
        <developerConnection>scm:git:git@github.com:hhru/nuts-and-bolts.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
</project>
